dify/0.15.3/dify-common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dify
