dify/0.15.3/dify-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dify
  namespace: dify
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /console/api
        pathType: Prefix
        backend:
          service:
            name: dify-api
            port:
              number: 5001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dify-api
            port:
              number: 5001
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: dify-api
            port:
              number: 5001
      - path: /files
        pathType: Prefix
        backend:
          service:
            name: dify-api
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dify-web
            port:
              number: 3000
